--- a/index.html
+++ b/index.html
@@ -3,27 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
-            rel='stylesheet'>
-        <title>Document</title>
         <link rel="stylesheet" href="style.css">
-        <script
-            src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+        <title>Document</title>
     </head>
     <body>
-        <header>
-            <div class="navbar">
-                <div class="innerbar">
-                    <div class="logo_innerbar">
-                        <div class="logo_wrt">
-                            <box-icon type='solid'
-                                name='sushi'
-                                size="lg" color="white"></box-icon></div>
-                        <a href>Abstract
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </header>
+        <label id="countlabel">0</label>
+        <div id="btncontainer">
+            <button id="dereasebtn">Decrease</button>
+            <button id="resetbtn">Reset</button>
+            <button id="increasebtn">Increase</button>
+        </div>
+        <script src="app.js"></script>
     </body>
 </html>
